<resources>
    <string name="app_name">My Important Dates</string>

    <string name="action_add">Add Date</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_hint">Add a new date</string>
    <string name="add_button_label">Add Important Date</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_item_label">Edit Date Below:</string>
    <string name="priorities_prompt">Normal</string>
    <string name="save_button_label">Save</string>
    <string name="priority_title">Priority:</string>
    <string name="task_description_title">Description:</string>
    <string name="due_date_title">Date:</string>
    <string name="banner_ad_unit_id">ca-app-pub-1942010622975585/5549217153</string>
</resources>
